--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next dev -p 3008",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=16384 next build",
+    "start": "next start -p 3008",
     "lint": "next lint"
   },
   "dependencies": {
